# coding-challenges

advent-of-code/: .clang-format  CMakeLists.txt  Makefile  README.md  generate_solution_template.py
advent-of-code/src/: utils.hpp
advent-of-code/src/2015/: day01.cpp
